--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,9 @@ html {
           box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
@@ -201,18 +203,6 @@ html {
 
 body {
   font-family: "Museo Slab W01 700", serif;
-}
-
-body {
-  background-color: #252525;
-}
-
-.container {
-  background-color: white;
-}
-
-header {
-  padding: 0 20px;
 }
 
 h1,
@@ -241,6 +231,18 @@ p {
   line-height: 1.8;
 }
 
+body {
+  background-color: #252525;
+}
+
+.container {
+  background-color: white;
+}
+
+header {
+  padding: 0 20px;
+}
+
 /* Product list style reset */
 .products {
   list-style-type: none;
@@ -253,6 +255,17 @@ p {
   text-transform: uppercase;
   margin: 1em 0;
   font-size: 14px;
+}
+
+footer {
+  padding: 10px 20px;
+  background: black;
+  color: white;
+  text-align: center;
+}
+
+footer a {
+  color: #ed0035;
 }
 
 /* Hiding images without a source or srcset attribute (in case we use lazy loading) */
