--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,52 +1,4 @@
-body {
-	background-color: #252525;
-}
-
-.container {
-	background-color: white;
-}
-
-header {
-	padding: 0 20px;
-}
-
-h1,
-h2 {
-	text-align: center;
-}
-
-h1 {
-	margin-top: 0;
-	padding-top: 0.6em;
-	font-size: 32px;
-	font-weight: bold;
-}
-
-h2 {
-	font-size: 16px;
-	text-transform: uppercase;
-	padding: 0.3em;
-	background: rgb(135, 0, 30);
-	color: white;
-}
-
-p {
-	font-family: sans-serif;
-	font-size: 14px;
-	line-height: 1.8;
-}
-
-/* Product list style reset */
-
-.products {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.products .title {
-	text-align: center;
-	text-transform: uppercase;
-	margin: 1em 0;
-	font-size: 14px;
-}
+@import "layout/containers";
+@import "layout/header";
+@import "layout/products";
+@import "layout/footer";
