Removed .scss from imports

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
 /* NORMALIZE */
 
-@import "variables.scss";
-@import "normalize.scss";
-@import "borderBox.scss";
-@import "fonts.scss";
+@import "variables";
+@import "normalize";
+@import "borderBox";
+@import "fonts";
 @import "type";
-@import "layout.scss";
-@import "imgTricks.scss";
+@import "layout";
+@import "imgTricks";
