--- a/scss/layout/_products.scss
+++ b/scss/layout/_products.scss
@@ -4,18 +4,26 @@
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-
 	display: flex;
 	flex-wrap: wrap;
-
-	img {
-		width: 100%;
-	}
 
 	.title {
 		text-align: center;
 		text-transform: uppercase;
 		margin: 1em 0;
 		font-size: 14px;
+	}
+}
+
+.product-images {
+	width: 100%;
+	height: 0;
+	position: relative;
+
+	img {
+		display: block;
+		height: auto;
+		width: 100%;
+		position: absolute;
 	}
 }
