Page hidden until code is injected

--- a/css/style.css
+++ b/css/style.css
@@ -230,14 +230,14 @@ p {
   line-height: 1.8;
 }
 
-body {
-  background-color: #252525;
+/* body {
+	background-color: #252525;
 }
 
 .container {
-  background-color: white;
+	background-color: white;
 }
-
+ */
 header {
   padding: 0 20px;
 }
@@ -288,5 +288,9 @@ footer a {
 /* Hiding images without a source or srcset attribute (in case we use lazy loading) */
 img:not([srcset]):not([src]) {
   visibility: hidden;
+}
+
+.hide {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
