--- a/css/style.css
+++ b/css/style.css
@@ -230,14 +230,15 @@ p {
   line-height: 1.8;
 }
 
-/* body {
-	background-color: #252525;
+body {
+  background-color: #252525;
 }
 
 .container {
-	background-color: white;
+  background-color: white;
+  margin: 0 auto;
 }
- */
+
 header {
   padding: 0 20px;
 }
