--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,44 @@ header {
   padding: 0 20px;
 }
 
+/* UI Commands */
+.commands {
+  font-family: sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 480px) {
+  .commands {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.commands fieldset {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  margin: 0;
+}
+
+.commands input[type="radio"],
+.commands input[type="checkbox"] {
+  margin: 0.3em;
+}
+
+#sharp {
+  margin-left: 1em;
+}
+
 /* Product list style  */
 .products {
   list-style-type: none;
