uiSettings double border fixed

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,5 @@
 @import "layout/containers";
 @import "layout/header";
-@import "layout/commands";
+@import "layout/uiSettings";
 @import "layout/products";
 @import "layout/footer";
