--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ header {
           flex-direction: column;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 600px) {
   #uiSettings {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -277,7 +277,7 @@ header {
   border-bottom: none;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 600px) {
   #uiSettings fieldset:first-child {
     border-bottom: 1px solid lightgray;
     border-right: none;
@@ -314,14 +314,13 @@ header {
 
 .product-images {
   width: 100%;
-  height: 0;
-  position: relative;
+  min-height: 205px;
 }
 
 .product-images img {
   display: block;
   height: auto;
-  position: absolute;
+  margin: 0 auto;
 }
 
 footer {
