--- a/scss/layout/_products.scss
+++ b/scss/layout/_products.scss
@@ -17,12 +17,11 @@
 
 .product-images {
 	width: 100%;
-	height: 0;
-	position: relative;
+	min-height: 205px;
 
 	img {
 		display: block;
 		height: auto;
-		position: absolute;
+		margin: 0 auto;
 	}
 }
